更新tum配置文件

--- a/Examples/RGB-D/TUM2.yaml
+++ b/Examples/RGB-D/TUM2.yaml
@@ -35,8 +35,8 @@ ThDepth: 40.0
 # Deptmap values factor 
 DepthMapFactor: 5208.0
 
-Camera.width: 640
-Camera.height: 480
+#Camera.width: 640
+#Camera.height: 480
 
 #--------------------------------------------------------------------------------------------
 # ORB Parameters
