--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,33 @@ Examples/ROS/ORB_SLAM3/Stereo_Inertial
 Examples/ROS/ORB_SLAM3/CMakeLists.txt.user
 Examples/ROS/ORB_SLAM3/build/
 
+Examples_old/RGB-D/rgbd_tum_old
+
+Examples_old/Monocular/mono_euroc_old
+Examples_old/Monocular/mono_kitti_old
+Examples_old/Monocular/mono_tum_old
+Examples_old/Monocular/mono_tum_vi_old
+
+Examples_old/Stereo/stereo_euroc_old
+Examples_old/Stereo/stereo_kitti_old
+Examples_old/Stereo/stereo_tum_vi_old
+
+Examples_old/Monocular-Inertial/mono_inertial_euroc_old
+Examples_old/Monocular-Inertial/mono_inertial_tum_vi_old
+
+Examples_old/Stereo-Inertial/stereo_inertial_euroc_old
+Examples_old/Stereo-Inertial/stereo_inertial_tum_vi_old
+
+Examples_old/ROS/ORB_SLAM3/Mono_old
+Examples_old/ROS/ORB_SLAM3/Mono_Inertial_old
+Examples_old/ROS/ORB_SLAM3/MonoAR_old
+Examples_old/ROS/ORB_SLAM3/RGBD_old
+Examples_old/ROS/ORB_SLAM3/Stereo_old
+Examples_old/ROS/ORB_SLAM3/Stereo_Inertial_old
+
+Examples_old/ROS/ORB_SLAM3/CMakeLists.txt.user
+Examples_old/ROS/ORB_SLAM3/build/
+
 KeyFrameTrajectory.txt
 CameraTrajectory.txt
 kf_*.txt
