--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(ORB_SLAM3)
 set(CMAKE_CXX_STANDARD 14)
 add_definitions(-DCOMPILEDWITHC11)
 
-add_subdirectory(Thirdparty/DBoW2)
+add_subdirectory(Thirdparty/DBoW2 ${CMAKE_CURRENT_BINARY_DIR}/DBoW2)
 #add_subdirectory(Thirdparty/g2o)
 #add_subdirectory(Thirdparty/Sophus)
 add_subdirectory(Examples/ROS/ORB_SLAM3_detailed_comments ${CMAKE_CURRENT_BINARY_DIR}/ROS_SLAM)
@@ -19,8 +19,8 @@ MESSAGE("Build type: " ${CMAKE_BUILD_TYPE})
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall   -O3")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS}  -Wall")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
-set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -march=native")
-set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -march=native")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -march=native")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native")
 
 # Check C++11 or C++0x support
 #include(CheckCXXCompilerFlag)
@@ -46,8 +46,8 @@ find_package(OpenCV 4)
 #      message(FATAL_ERROR "OpenCV > 4.4 not found.")
 #   endif()
 
-MESSAGE("OPENCV VERSION:")
-MESSAGE(${OpenCV_VERSION})
+#MESSAGE("OPENCV VERSION:")
+#MESSAGE(${OpenCV_VERSION})
 
 find_package(Eigen3 REQUIRED)
 find_package(Pangolin REQUIRED)
