--- a/Examples/ROS/ORB_SLAM3_detailed_comments/CMakeLists.txt
+++ b/Examples/ROS/ORB_SLAM3_detailed_comments/CMakeLists.txt
@@ -1,11 +1,11 @@
 cmake_minimum_required(VERSION 2.4.6)
-include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
+#include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
 
-rosbuild_init()
+#rosbuild_init()
 
-#IF (NOT ROS_BUILD_TYPE)
-#    SET(ROS_BUILD_TYPE Release)
-#ENDIF ()
+IF (NOT ROS_BUILD_TYPE)
+    SET(ROS_BUILD_TYPE Release)
+ENDIF ()
 
 MESSAGE("Build type: " ${ROS_BUILD_TYPE})
 
@@ -44,23 +44,26 @@ find_package(Eigen3 REQUIRED)
 find_package(Pangolin REQUIRED)
 find_package(g2o REQUIRED)
 find_package(OpenMP REQUIRED)
+find_package(catkin REQUIRED COMPONENTS roscpp rospy std_msgs genmsg cv_bridge message_filters)
 
 
 include_directories(
         ${PROJECT_SOURCE_DIR}
-        ${PROJECT_SOURCE_DIR}/../../../
-        ${PROJECT_SOURCE_DIR}/../../../include
-        ${PROJECT_SOURCE_DIR}/../../../include/CameraModels
+        ${PROJECT_SOURCE_DIR}/include
+        ${PROJECT_SOURCE_DIR}/include/CameraModels
 #        ${PROJECT_SOURCE_DIR}/../../../Thirdparty/Sophus
         ${Pangolin_INCLUDE_DIRS}
         ${Sophus_INCLUDE_DIRS}
         ${G2O_INCLUDE_DIRS}
+        ${catkin_INCLUDE_DIRS}
 )
-
+#message(hyx:${catkin_INCLUDE_DIRS})
+message(hyx:${PROJECT_SOURCE_DIR})
 set(LIBS
         ${OpenCV_LIBS}
         ${EIGEN3_LIBS}
         ${Pangolin_LIBRARIES}
+        ${catkin_LIBRARIES}
 #        ${PROJECT_SOURCE_DIR}/../../../Thirdparty/DBoW2/lib/libDBoW2.so
         DBoW2
 #        ${PROJECT_SOURCE_DIR}/../../../Thirdparty/g2o/lib/libg2o.so
@@ -73,7 +76,7 @@ set(LIBS
         )
 
 # Node for monocular camera
-rosbuild_add_executable(Mono
+add_executable(Mono
         src/ros_mono.cc
         )
 
@@ -82,7 +85,7 @@ target_link_libraries(Mono
         )
 
 # Node for monocular camera (Augmented Reality Demo)
-rosbuild_add_executable(MonoAR
+add_executable(MonoAR
         src/AR/ros_mono_ar.cc
         src/AR/ViewerAR.h
         src/AR/ViewerAR.cc
@@ -93,7 +96,7 @@ target_link_libraries(MonoAR
         )
 
 # Node for stereo camera
-rosbuild_add_executable(Stereo
+add_executable(Stereo
         src/ros_stereo.cc
         )
 
@@ -102,7 +105,7 @@ target_link_libraries(Stereo
         )
 
 # Node for RGB-D camera
-rosbuild_add_executable(RGBD
+add_executable(RGBD
         src/ros_rgbd.cc
         )
 
@@ -111,7 +114,7 @@ target_link_libraries(RGBD
         )
 
 # Node for monocular-inertial camera
-rosbuild_add_executable(Mono_Inertial
+add_executable(Mono_Inertial
         src/ros_mono_inertial.cc
         )
 
@@ -120,7 +123,7 @@ target_link_libraries(Mono_Inertial
         )
 
 # Node for stereo-inertial camera
-rosbuild_add_executable(Stereo_Inertial
+add_executable(Stereo_Inertial
         src/ros_stereo_inertial.cc
         )
 
